# tuition-calculator

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
tuition-calculator/static/: style.css
tuition-calculator/templates/: index.html
tuition-estimator/: __init__.py
