[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tuition-estimator"
version = "0.1.0"
description = "Internal university course costing Flask application."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Rhys Findlater", email = "findlaterrr@gmail.com" },
  { name = "Regan Williams", email = "williamsreganj@gmail.com"}
]
license = { text = "Proprietary - internal university use only" }

# Main runtime dependencies
dependencies = [
  "flask>=3.0",
  "python-dotenv>=1.0",
  # blinker==1.9.0
  #click==8.1.8
  #colorama==0.4.6
  #Flask==3.1.2
  #importlib_metadata==8.7.0
  #itsdangerous==2.2.0
  #Jinja2==3.1.6
  #MarkupSafe==3.0.3
  #Werkzeug==3.1.4
  #zipp==3.23.0
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8",
]

[project.urls]
Homepage = "https://github.com/Rhys-Findlater/tuition-estimator.git"
